migration-result/docs/ver/13.x/database-access/guides/postgres-self-hosted.mdx
---
title: Database Access with Self-Hosted PostgreSQL
description: How to configure Teleport database access with self-hosted PostgreSQL.
version: "13.x"
---

Teleport can provide secure access to PostgreSQL via the  [Teleport Database
Service](/docs/ver/13.x/database-access/introduction). This allows for
fine-grained access control through [Teleport's RBAC](/docs/ver/13.x/database-access/rbac).

In this guide, you will:

1. Configure an PostgreSQL database with mutual TLS authentication.
2. Join the PostgreSQL database to your Teleport cluster.
3. Connect to the PostgreSQL database via the Teleport Database Service.

<Tabs>
  <Tab title="Self-Hosted">
        <img src="/assets/postgresqlselfhosted_selfhosted-3b552817c9.png" alt="Teleport Database Access PostgreSQL Self-Hosted" width="1178" height="483" />
  </Tab>

  <Tab title="Teleport Enterprise Cloud">
        <img src="/assets/postgresqlselfhosted_cloud-b94b08bd79.png" alt="Teleport Database Access PostgreSQL Cloud" width="1178" height="483" />
  </Tab>
</Tabs>

## Prerequisites

<Tabs>
  <Tab title="Teleport Community Edition">
    - A running Teleport cluster. For details on how to set this up, see our
      [Getting Started](/docs/ver/13.x) guide.

    - The `tctl` admin tool and `tsh` client tool version >= 13.4.16.

      ```bash
      $ tctl version
      # Teleport v13.4.16 go1.21

      $ tsh version
      # Teleport v13.4.16 go1.21
      ```

      See [Installation](/docs/ver/13.x/installation) for details.

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```bash
    $ tctl version
    # Teleport v13.4.16 go1.21
      
    $ tsh version
    # Teleport v13.4.16 go1.21
    ```
  </Tab>

  <Tab title="Teleport Team">
    - A Teleport Team account. If you don't have an account, sign
      up to begin your [free trial](https://goteleport.com/signup/).

    - The Enterprise `tctl` admin tool and `tsh` client tool, version >= 14.3.6.

      You can download these tools from the [Cloud Downloads page](/docs/ver/13.x/choose-an-edition/teleport-cloud/downloads).

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```bash
    $ tctl version
    # Teleport Enterprise v14.3.6 go1.21
      
    $ tsh version
    # Teleport v14.3.6 go1.21
    ```
  </Tab>

  <Tab title="Teleport Enterprise">
    - A running Teleport Enterprise cluster. For details on how to set this up, see our Enterprise
      [Getting Started](/docs/ver/13.x/choose-an-edition/teleport-enterprise/introduction) guide.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >=
      13.4.16, which you can download by visiting your [Teleport
      account](https://teleport.sh).

      ```bash
      $ tctl version
      # Teleport Enterprise v13.4.16 go1.21

      $ tsh version
      # Teleport v13.4.16 go1.21
      ```
  </Tab>

  <Tab title="Teleport Enterprise Cloud">
    - A Teleport Enterprise Cloud account. If you do not have one, visit the [signup
      page](https://goteleport.com/signup/) to begin a free trial of Teleport Team
      and upgrade to Teleport Enterprise Cloud.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 14.3.6.
      You can download these tools from the [Cloud Downloads page](/docs/ver/13.x/choose-an-edition/teleport-cloud/downloads).

      ```bash
      $ tctl version
      # Teleport Enterprise v14.3.6 go1.21

      $ tsh version
      # Teleport v14.3.6 go1.21
      ```
  </Tab>
</Tabs>

- A self-hosted PostgreSQL instance.
- Command-line client `psql` installed and added to your system's `PATH` environment variable.
- A host, e.g., an Amazon EC2 instance, where you will run the Teleport Database
  Service.
- Make sure you can connect to your Teleport cluster by authenticating with `tsh`
  so you can execute commands with the `tctl` admin tool:
  <Tabs>
    <Tab title="Self-Hosted">
      ```bash
      $ tsh login --proxy=teleport.example.com --user=email@example.com
      $ tctl status
      # Cluster  teleport.example.com
      # Version  13.4.16
      # CA pin   sha256:abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678
      ```

      You can run subsequent `tctl` commands in this guide on your local machine.

      For full privileges, you can also run `tctl` commands on your Teleport Auth
      Service host.
    </Tab>

    <Tab title="Teleport Cloud">
      ```bash
      $ tsh login --proxy=myinstance.teleport.sh --user=email@example.com
      $ tctl status
      # Cluster  myinstance.teleport.sh
      # Version  14.3.6
      # CA pin   sha256:sha-hash-here
      ```

      You must run subsequent `tctl` commands in this guide on your local machine.
    </Tab>
  </Tabs>

## Step 1/5. Create a Teleport token and user

The Database Service requires a valid auth token to connect to the cluster. Generate
one by running the following command against your Teleport Auth Service and save
it in `/tmp/token` on the node that will run the Database Service:

```bash
$ tctl tokens add --type=db
```

### Create a Teleport user

<Tip>
  To modify an existing user to provide access to the Database Service, see [Database Access Access Controls](/docs/ver/13.x/database-access/rbac)
</Tip>

<Tabs>
  <Tab title="Teleport Team/Community Edition">
    Create a local Teleport user with the built-in `access` role:

    ```bash
    $ tctl users add \
      --roles=access \
      --db-users=\* \
      --db-names=\* \
      alice
    ```
  </Tab>

  <Tab title="Teleport Enterprise/Enterprise Cloud">
    Create a local Teleport user with the built-in `access` and `requester` roles:

    ```bash
    $ tctl users add \
      --roles=access,requester \
      --db-users=\* \
      --db-names=\* \
      alice
    ```
  </Tab>
</Tabs>

| Flag                      | Description                                                                                                                              |
| ------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------- |
| <nobr>`--roles`</nobr>    | List of roles to assign to the user. The builtin `access` role allows them to connect to any database server registered with Teleport.   |
| <nobr>`--db-users`</nobr> | List of database usernames the user will be allowed to use when connecting to the databases. A wildcard allows any user.                 |
| <nobr>`--db-names`</nobr> | List of logical databases (aka schemas) the user will be allowed to connect to within a database server. A wildcard allows any database. |

<Warning>
  Database names are only enforced for PostgreSQL and MongoDB databases.
</Warning>

For more detailed information about database access controls and how to restrict
access see [RBAC](/docs/ver/13.x/database-access/rbac) documentation.

## Step 2/5. Create a certificate/key pair

Teleport uses mutual TLS authentication with self-hosted databases. These
databases must be configured with Teleport's certificate authority to be
able to verify client certificates. They also need a certificate/key pair that
Teleport can verify.

If you are using Teleport Cloud, your Teleport user must be allowed to
impersonate the system role `Db` in order to be able to generate the database
certificate.

Include the following `allow` rule in in your Teleport Cloud user's role:

```yaml
allow:
  impersonate:
    users: ["Db"]
    roles: ["Db"]
```

Create the secrets:

```bash
# Export Teleport's certificate authority and a generate certificate/key pair
# for host db.example.com with a 1-year validity period.
$ tctl auth sign --format=db --host=db.example.com --out=server --ttl=2190h
```

In this example, `db.example.com` is the hostname where the Teleport Database
Service can reach the PostgreSQL server.

<Note>
  <p>
    **TTL**
  </p>

  We recommend using a shorter TTL, but keep mind that you'll need to update the
  database server certificate before it expires to not lose the ability to
  connect. Pick the TTL value that best fits your use-case.
</Note>

The command will create 3 files: `server.cas`, `server.crt` and `server.key`
which you'll need to enable mutual TLS on your PostgreSQL server.

## Step 3/5. Configure your PostgreSQL server

To configure your PostgreSQL server to accept TLS connections, add the following
to the PostgreSQL configuration file, `postgresql.conf`:

```conf
ssl = on
ssl_cert_file = '/path/to/server.crt'
ssl_key_file = '/path/to/server.key'
ssl_ca_file = '/path/to/server.cas'
```

See [Secure TCP/IP Connections with SSL](https://www.postgresql.org/docs/current/ssl-tcp.html)
in the PostgreSQL documentation for more details.

Additionally, PostgreSQL should be configured to require client certificate
authentication from clients connecting over TLS. This can be done by adding
the following entries to PostgreSQL's host-based authentication file `pg_hba.conf`:

```conf
hostssl all             all             ::/0                    cert
hostssl all             all             0.0.0.0/0               cert
```

You should also ensure that you have no higher-priority `md5` authentication
rules that will match, otherwise PostgreSQL will offer them first, and the
certificate-based Teleport login will fail.

See [The pg\_hba.conf File](https://www.postgresql.org/docs/current/auth-pg-hba-conf.html)
in the PostgreSQL documentation for more details.

## Step 4/5. Configure and Start the Database Service

Install and configure Teleport where you will run the Teleport Database Service:

<Tabs>
  <Tab title="Linux Server">
    Use the appropriate commands for your environment to install your package:

    <Tabs dropdownView dropdownCaption="Teleport Edition">
      <Tab title="Teleport Community Edition">
        ```bash
        $ curl https://goteleport.com/static/install.sh | bash -s 13.4.16
        ```
      </Tab>

      <Tab title="Teleport Team">
        <Tabs>
          <Tab title="Debian 9+/Ubuntu 16.04+ (apt)">
            Add the Teleport repository to your repository list:

            ```bash
            # Download Teleport's PGP public key
            $ sudo curl https://apt.releases.teleport.dev/gpg \
            -o /usr/share/keyrings/teleport-archive-keyring.asc
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport APT repository for cloud.
            $ echo "deb [signed-by=/usr/share/keyrings/teleport-archive-keyring.asc] \
            https://apt.releases.teleport.dev/${ID?} ${VERSION_CODENAME?} stable/cloud" \
            | sudo tee /etc/apt/sources.list.d/teleport.list > /dev/null

            # Provide your Teleport domain to query the latest compatible Teleport version
            $ export TELEPORT_DOMAIN=example.teleport.com
            $ export TELEPORT_VERSION="$(curl https://$TELEPORT_DOMAIN/v1/webapi/automaticupgrades/channel/default/version | sed 's/v//')"

            # Update the repo and install Teleport and the Teleport updater
            $ sudo apt-get update
            $ sudo apt-get install "teleport-ent=$TELEPORT_VERSION" teleport-ent-updater
            ```
          </Tab>

          <Tab title="Amazon Linux 2/RHEL 7/CentOS 7 (yum)">
            ```bash
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport YUM repository for cloud.
            # First, get the OS major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            $ sudo yum install -y yum-utils
            $ sudo yum-config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-yum.repo")"

            # Provide your Teleport domain to query the latest compatible Teleport version
            $ export TELEPORT_DOMAIN=example.teleport.com
            $ export TELEPORT_VERSION="$(curl https://$TELEPORT_DOMAIN/v1/webapi/automaticupgrades/channel/default/version | sed 's/v//')"

            # Install Teleport and the Teleport updater
            $ sudo yum install "teleport-ent-$TELEPORT_VERSION" teleport-ent-updater

            # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
            # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
            ```
          </Tab>

          <Tab title="Amazon Linux 2023/RHEL 8+ (dnf)">
            ```bash
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport YUM repository for cloud.
            # First, get the OS major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            # Use the dnf config manager plugin to add the teleport RPM repo
            $ sudo dnf config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-yum.repo")"

            # Provide your Teleport domain to query the latest compatible Teleport version
            $ export TELEPORT_DOMAIN=example.teleport.com
            $ export TELEPORT_VERSION="$(curl https://$TELEPORT_DOMAIN/v1/webapi/automaticupgrades/channel/default/version | sed 's/v//')"

            # Install Teleport and the Teleport updater
            $ sudo dnf install "teleport-ent-$TELEPORT_VERSION" teleport-ent-updater

            # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
            # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
            ```
          </Tab>

          <Tab title="SLES 12 SP5+ and 15 SP5+ (zypper)">
            ```bash
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport Zypper repository for cloud.
            # First, get the OS major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            # Use Zypper to add the teleport RPM repo
            $ sudo zypper addrepo --refresh --repo $(rpm --eval "https://zypper.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-zypper.repo")

            # Provide your Teleport domain to query the latest compatible Teleport version
            $ export TELEPORT_DOMAIN=example.teleport.com
            $ export TELEPORT_VERSION="$(curl https://$TELEPORT_DOMAIN/v1/webapi/automaticupgrades/channel/default/version | sed 's/v//')"

            # Install Teleport and the Teleport updater
            $ sudo zypper install "teleport-ent-$TELEPORT_VERSION" teleport-ent-updater
            ```
          </Tab>
        </Tabs>

        ### OS repository channels

        The following channels are available for APT, YUM, and Zypper repos. They may be used in place of
        `stable/v13` anywhere in the Teleport documentation.

        | Channel name     | Description                                                                  |
        | ---------------- | ---------------------------------------------------------------------------- |
        | `stable/<major>` | Receives releases for the specified major release line, i.e. `v13`           |
        | `stable/cloud`   | Rolling channel that receives releases compatible with current Cloud version |
        | `stable/rolling` | Rolling channel that receives all published Teleport releases                |

        <Accordion title="Is my Teleport instance compatible with Teleport Team?">
          Before installing a `teleport` binary with a version besides
          v14, read our compatibility rules to ensure that the
          binary is compatible with Teleport Cloud.

          When running multiple `teleport` binaries within a cluster, the following rules
          apply:

          - **Patch and minor** versions are always compatible, for example, any 8.0.1
            component will work with any 8.0.3 component and any 8.1.0 component will work
            with any 8.3.0 component.
          - Servers support clients that are 1 major version behind, but do not support
            clients that are on a newer major version. For example, an 8.x.x Proxy Service
            is compatible with 7.x.x resource services and 7.x.x `tsh`, but we don't
            guarantee that a 9.x.x resource service will work with an 8.x.x Proxy Service.
            This also means you must not attempt to upgrade from 6.x.x straight to 8.x.x.
            You must upgrade to 7.x.x first.
          - Proxy Services and resource services do not support Auth Services that are on
            an older major version, and will fail to connect to older Auth Services by
            default. This behavior can be overridden by passing `--skip-version-check`
            when starting Proxy Services and resource services.
        </Accordion>
      </Tab>

      <Tab title="Teleport Enterprise">
        <Tabs>
          <Tab title="Debian 9+/Ubuntu 16.04+ (apt)">
            ```bash
            # Download Teleport's PGP public key
            $ sudo curl https://apt.releases.teleport.dev/gpg \
            -o /usr/share/keyrings/teleport-archive-keyring.asc
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport APT repository for v13. You'll need to update this
            # file for each major release of Teleport.
            $ echo "deb [signed-by=/usr/share/keyrings/teleport-archive-keyring.asc] \
            https://apt.releases.teleport.dev/${ID?} ${VERSION_CODENAME?} stable/v13" \
            | sudo tee /etc/apt/sources.list.d/teleport.list > /dev/null

            $ sudo apt-get update
            $ sudo apt-get install teleport-ent
            ```

            For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

            ```bash
            $ sudo apt-get install teleport-ent-fips
            ```
          </Tab>

          <Tab title="Amazon Linux 2/RHEL 7 (yum)">
            ```bash
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport YUM repository for v13. You'll need to update this
            # file for each major release of Teleport.
            # First, get the major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            $ sudo yum install -y yum-utils
            $ sudo yum-config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/v13/teleport.repo")"
            $ sudo yum install teleport-ent
            #
            # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
            # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
            ```

            For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

            ```bash
            $ sudo yum install teleport-ent-fips
            ```
          </Tab>

          <Tab title="Amazon Linux 2/RHEL 7 (zypper)">
            ```bash
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport Zypper repository for v13. You'll need to update this
            # file for each major release of Teleport.
            # First, get the OS major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            # Use zypper to add the teleport RPM repo
            $ sudo zypper addrepo --refresh --repo $(rpm --eval "https://zypper.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-zypper.repo")
            $ sudo yum install teleport-ent
            #
            # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
            # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
            ```

            For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

            ```bash
            $ sudo yum install teleport-ent-fips
            ```
          </Tab>

          <Tab title="Amazon Linux 2023/RHEL 8+ (dnf)">
            ```bash
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport YUM repository for v13. You'll need to update this
            # file for each major release of Teleport.
            # First, get the major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            # Use the dnf config manager plugin to add the teleport RPM repo
            $ sudo dnf config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/v13/teleport.repo")"

            # Install teleport
            $ sudo dnf install teleport-ent

            # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
            # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
            ```

            For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

            ```bash
            $ sudo dnf install teleport-ent-fips
            ```
          </Tab>

          <Tab title="SLES 12 SP5+ and 15 SP5+ (zypper)">
            ```bash
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport Zypper repository.
            # First, get the OS major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            # Use Zypper to add the teleport RPM repo
            $ sudo zypper addrepo --refresh --repo $(rpm --eval "https://zypper.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/v13/teleport-zypper.repo")

            # Install teleport
            $ sudo zypper install teleport-ent
            ```

            For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

            ```bash
            $ sudo zypper install teleport-ent-fips
            ```
          </Tab>

          <Tab title="Tarball">
            In the example commands below, update `$SYSTEM_ARCH` with the appropriate
            value (`amd64`, `arm64`, or `arm`). All example commands using this variable
            will update after one is filled out.

            ```bash
            $ curl https://cdn.teleport.dev/teleport-ent-v13.4.16-linux-$SYSTEM_ARCH-bin.tar.gz.sha256
            # <checksum> <filename>
            $ curl -O https://cdn.teleport.dev/teleport-ent-v13.4.16-linux-$SYSTEM_ARCH-bin.tar.gz
            $ shasum -a 256 teleport-ent-v13.4.16-linux-$SYSTEM_ARCH-bin.tar.gz
            # Verify that the checksums match
            $ tar -xvf teleport-ent-v13.4.16-linux-$SYSTEM_ARCH-bin.tar.gz
            $ cd teleport-ent
            $ sudo ./install
            ```

            For FedRAMP/FIPS-compliant installations of Teleport Enterprise, package URLs
            will be slightly different:

            ```bash
            $ curl https://cdn.teleport.dev/teleport-ent-v13.4.16-linux-$SYSTEM_ARCH-fips-bin.tar.gz.sha256
            # <checksum> <filename>
            $ curl -O https://cdn.teleport.dev/teleport-ent-v13.4.16-linux-$SYSTEM_ARCH-fips-bin.tar.gz
            $ shasum -a 256 teleport-ent-v13.4.16-linux-$SYSTEM_ARCH-fips-bin.tar.gz
            # Verify that the checksums match
            $ tar -xvf teleport-ent-v13.4.16-linux-$SYSTEM_ARCH-fips-bin.tar.gz
            $ cd teleport-ent
            $ sudo ./install
            ```
          </Tab>
        </Tabs>

        ### OS repository channels

        The following channels are available for APT, YUM, and Zypper repos. They may be used in place of
        `stable/v13` anywhere in the Teleport documentation.

        | Channel name     | Description                                                                  |
        | ---------------- | ---------------------------------------------------------------------------- |
        | `stable/<major>` | Receives releases for the specified major release line, i.e. `v13`           |
        | `stable/cloud`   | Rolling channel that receives releases compatible with current Cloud version |
        | `stable/rolling` | Rolling channel that receives all published Teleport releases                |
      </Tab>

      <Tab title="Teleport Enterprise Cloud">
        <Tabs>
          <Tab title="Debian 9+/Ubuntu 16.04+ (apt)">
            Add the Teleport repository to your repository list:

            ```bash
            # Download Teleport's PGP public key
            $ sudo curl https://apt.releases.teleport.dev/gpg \
            -o /usr/share/keyrings/teleport-archive-keyring.asc
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport APT repository for cloud.
            $ echo "deb [signed-by=/usr/share/keyrings/teleport-archive-keyring.asc] \
            https://apt.releases.teleport.dev/${ID?} ${VERSION_CODENAME?} stable/cloud" \
            | sudo tee /etc/apt/sources.list.d/teleport.list > /dev/null

            # Provide your Teleport domain to query the latest compatible Teleport version
            $ export TELEPORT_DOMAIN=example.teleport.com
            $ export TELEPORT_VERSION="$(curl https://$TELEPORT_DOMAIN/v1/webapi/automaticupgrades/channel/default/version | sed 's/v//')"

            # Update the repo and install Teleport and the Teleport updater
            $ sudo apt-get update
            $ sudo apt-get install "teleport-ent=$TELEPORT_VERSION" teleport-ent-updater
            ```
          </Tab>

          <Tab title="Amazon Linux 2/RHEL 7/CentOS 7 (yum)">
            ```bash
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport YUM repository for cloud.
            # First, get the OS major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            $ sudo yum install -y yum-utils
            $ sudo yum-config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-yum.repo")"

            # Provide your Teleport domain to query the latest compatible Teleport version
            $ export TELEPORT_DOMAIN=example.teleport.com
            $ export TELEPORT_VERSION="$(curl https://$TELEPORT_DOMAIN/v1/webapi/automaticupgrades/channel/default/version | sed 's/v//')"

            # Install Teleport and the Teleport updater
            $ sudo yum install "teleport-ent-$TELEPORT_VERSION" teleport-ent-updater

            # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
            # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
            ```
          </Tab>

          <Tab title="Amazon Linux 2023/RHEL 8+ (dnf)">
            ```bash
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport YUM repository for cloud.
            # First, get the OS major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            # Use the dnf config manager plugin to add the teleport RPM repo
            $ sudo dnf config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-yum.repo")"

            # Provide your Teleport domain to query the latest compatible Teleport version
            $ export TELEPORT_DOMAIN=example.teleport.com
            $ export TELEPORT_VERSION="$(curl https://$TELEPORT_DOMAIN/v1/webapi/automaticupgrades/channel/default/version | sed 's/v//')"

            # Install Teleport and the Teleport updater
            $ sudo dnf install "teleport-ent-$TELEPORT_VERSION" teleport-ent-updater

            # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
            # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
            ```
          </Tab>

          <Tab title="SLES 12 SP5+ and 15 SP5+ (zypper)">
            ```bash
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport Zypper repository for cloud.
            # First, get the OS major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            # Use Zypper to add the teleport RPM repo
            $ sudo zypper addrepo --refresh --repo $(rpm --eval "https://zypper.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-zypper.repo")

            # Provide your Teleport domain to query the latest compatible Teleport version
            $ export TELEPORT_DOMAIN=example.teleport.com
            $ export TELEPORT_VERSION="$(curl https://$TELEPORT_DOMAIN/v1/webapi/automaticupgrades/channel/default/version | sed 's/v//')"

            # Install Teleport and the Teleport updater
            $ sudo zypper install "teleport-ent-$TELEPORT_VERSION" teleport-ent-updater
            ```
          </Tab>
        </Tabs>

        ### OS repository channels

        The following channels are available for APT, YUM, and Zypper repos. They may be used in place of
        `stable/v13` anywhere in the Teleport documentation.

        | Channel name     | Description                                                                  |
        | ---------------- | ---------------------------------------------------------------------------- |
        | `stable/<major>` | Receives releases for the specified major release line, i.e. `v13`           |
        | `stable/cloud`   | Rolling channel that receives releases compatible with current Cloud version |
        | `stable/rolling` | Rolling channel that receives all published Teleport releases                |

        <Accordion title="Is my Teleport instance compatible with Teleport Enterprise Cloud?">
          Before installing a `teleport` binary with a version besides v14,
          read our compatibility rules to ensure that the binary is compatible with
          Teleport Enterprise Cloud.

          When running multiple `teleport` binaries within a cluster, the following rules
          apply:

          - **Patch and minor** versions are always compatible, for example, any 8.0.1
            component will work with any 8.0.3 component and any 8.1.0 component will work
            with any 8.3.0 component.
          - Servers support clients that are 1 major version behind, but do not support
            clients that are on a newer major version. For example, an 8.x.x Proxy Service
            is compatible with 7.x.x resource services and 7.x.x `tsh`, but we don't
            guarantee that a 9.x.x resource service will work with an 8.x.x Proxy Service.
            This also means you must not attempt to upgrade from 6.x.x straight to 8.x.x.
            You must upgrade to 7.x.x first.
          - Proxy Services and resource services do not support Auth Services that are on
            an older major version, and will fail to connect to older Auth Services by
            default. This behavior can be overridden by passing `--skip-version-check`
            when starting Proxy Services and resource services.
        </Accordion>
      </Tab>
    </Tabs>

    On the host where you will run the Teleport Database Service, start Teleport
    with the appropriate configuration.

    Note that a single Teleport process can run multiple different services, for
    example multiple Database Service agents as well as the SSH Service or Application
    Service. The step below will overwrite an existing configuration file, so if
    you're running multiple services add `--output=stdout` to print the config in
    your terminal, and manually adjust `/etc/teleport.yaml`.

    Generate a configuration file at `/etc/teleport.yaml` for the Database Service:

    <Tabs>
      <Tab title="Teleport Enterprise/Enterprise Cloud">
        ```bash
        $ sudo teleport db configure create \
           -o file \
           --token=/tmp/token \
           --proxy=teleport.example.com:443 \
           --name=example-postgres \
           --protocol=postgres \
           --uri=postgres.example.com:5432 \
           --labels=env=dev 
        ```
      </Tab>

      <Tab title="Teleport Team/Community Edition">
        ```bash
        $ sudo teleport db configure create \
           -o file \
           --token=/tmp/token \
           --proxy=mytenant.teleport.sh:443 \
           --name=example-postgres \
           --protocol=postgres \
           --uri=postgres.example.com:5432 \
           --labels=env=dev
        ```
      </Tab>
    </Tabs>

    Configure the Teleport Database Service to start automatically when the host boots up by
    creating a systemd service for it. The instructions depend on how you installed
    the Teleport Database Service.

    <Tabs>
      <Tab title="Package Manager">
        On the host where you will run the Teleport Database Service, enable and start Teleport:

        ```bash
        $ sudo systemctl enable teleport
        $ sudo systemctl start teleport
        ```
      </Tab>

      <Tab title="TAR Archive">
        On the host where you will run the Teleport Database Service, create a systemd service
        configuration for Teleport, enable the Teleport service, and start Teleport:

        ```bash
        $ sudo teleport install systemd -o /etc/systemd/system/teleport.service
        $ sudo systemctl enable teleport
        $ sudo systemctl start teleport
        ```
      </Tab>
    </Tabs>

    You can check the status of the Teleport Database Service with `systemctl status teleport`
    and view its logs with `journalctl -fu teleport`.
  </Tab>

  <Tab title="Kubernetes Cluster">
    Teleport provides Helm charts for installing the Teleport Database Service in Kubernetes Clusters.

    To allow Helm to install charts that are hosted in the Teleport Helm repository, use `helm repo add`:

    ```bash
    $ helm repo add teleport https://charts.releases.teleport.dev
    ```

    To update the cache of charts from the remote repository, run `helm repo update`:

    ```bash
    $ helm repo update
    ```

    <Tabs>
      <Tab title="Self-Hosted">
        Install the Teleport Kube Agent into your Kubernetes Cluster
        with the Teleport Database Service configuration.

        ```bash
        $ JOIN_TOKEN=$(cat /tmp/token)
        $ helm install teleport-kube-agent teleport/teleport-kube-agent \
          --create-namespace \
          --namespace teleport-agent \
          --set roles=db \
          --set proxyAddr=teleport.example.com:443 \
          --set authToken=${JOIN_TOKEN?} \
          --set "databases[0].name=example-postgres" \
          --set "databases[0].uri=postgres.example.com:5432" \
          --set "databases[0].protocol=postgres" \
          --set "labels.env=dev" \
          --version 13.4.16
        ```
      </Tab>

      <Tab title="Cloud-Hosted">
        Install the Teleport Kube Agent into your Kubernetes Cluster
        with the Teleport Database Service configuration.

        ```bash
        $ JOIN_TOKEN=$(cat /tmp/token)
        $ helm install teleport-kube-agent teleport/teleport-kube-agent \
          --create-namespace \
          --namespace teleport-agent \
          --set roles=db \
          --set proxyAddr=mytenant.teleport.sh:443 \
          --set authToken=${JOIN_TOKEN?} \
          --set "databases[0].name=example-postgres" \
          --set "databases[0].uri=postgres.example.com:5432" \
          --set "databases[0].protocol=postgres" \
          --set "labels.env=dev" \
          --version 14.3.6
        ```
      </Tab>
    </Tabs>

    Make sure that the Teleport agent pod is running. You should see one
    `teleport-kube-agent` pod with a single ready container:

    ```bash
    $ kubectl -n teleport-agent get pods
    NAME                    READY   STATUS    RESTARTS   AGE
    teleport-kube-agent-0   1/1     Running   0          32s
    ```
  </Tab>
</Tabs>

<Tip>
  <p>
    **Tip**
  </p>

  A single Teleport process can run multiple services, for example
  multiple Database Service instances as well as other services such the
  SSH Service or Application Service.
</Tip>

## Step 5/5. Connect

Once the Database Service has joined the cluster, log in to see the available
databases:

<Tabs>
  <Tab title="Self-Hosted">
    ```bash
    $ tsh login --proxy=teleport.example.com --user=alice
    $ tsh db ls
    # Name             Description        Labels
    # ---------------- ------------------ --------
    # example-postgres Example PostgreSQL env=dev
    ```
  </Tab>

  <Tab title="Teleport Enterprise Cloud">
    ```bash
    $ tsh login --proxy=mytenant.teleport.sh --user=alice
    $ tsh db ls
    # Name             Description        Labels
    # ---------------- ------------------ --------
    # example-postgres Example PostgreSQL env=dev
    ```
  </Tab>
</Tabs>

Note that you will only be able to see databases your role has access to. See
[RBAC](/docs/ver/13.x/database-access/rbac) section for more details.

To retrieve credentials for a database and connect to it:

```bash
$ tsh db connect --db-user=postgres --db-name=postgres example-postgres
```

To log out of the database and remove credentials:

```bash
# Remove credentials for a particular database instance.
$ tsh db logout example-postgres
# Remove credentials for all database instances.
$ tsh db logout
```

## Troubleshooting

### Unable to cancel a query

If you use a PostgreSQL cli client like `psql`, and you try to cancel a query
with `ctrl+c`, but it doesn't cancel the query, then you need to connect using a
tsh local proxy instead.
When `psql` cancels a query, it establishes a new connection without TLS
certificates, however Teleport requires TLS certificates not only for
authentication, but also to route database connections.

If you
[enable TLS Routing in Teleport](/docs/ver/13.x/management/operations/tls-routing)
then `tsh db connect` will automatically start a local proxy for every
connection.
Alternatively, you can connect via
[Teleport Connect](/docs/ver/13.x/connect-your-client/teleport-connect)
which also uses a local proxy.
Otherwise, you need to start a tsh local proxy manually using `tsh proxy db`
and connect via the local proxy.

If you have already started a long-running query in a `psql` session that you
cannot cancel with ctrl+c, you can start a new client session to cancel that
query manually:

First, find the query's process identifier (PID):

```sql
SELECT pid,usename,backend_start,query FROM pg_stat_activity WHERE state = 'active';
```

Next, gracefully cancel the query using its PID.
This will send a SIGINT signal to the postgres backend process for that query:

```sql
SELECT pg_cancel_backend(<PID>);
```

You should always try to gracefully terminate a query first, but if graceful
cancellation is taking too long, then you can forcefully terminate the query
instead.
This will send a SIGTERM signal to the postgres backend process for that query:

```sql
SELECT pg_terminate_backend(<PID>);
```

See the PostgreSQL documentation on
[admin functions](https://www.postgresql.org/docs/current/functions-admin.html#FUNCTIONS-ADMIN-SIGNAL)
for more information about the `pg_cancel_backend` and `pg_terminate_backend`
functions.

## Next steps

- Set up [automatic database user provisioning](/docs/ver/13.x/database-access/rbac/configuring-auto-user-provisioning).
  (!docs/pages/includes/database-access/guides-next-steps.mdx!)
